--- a/app/globals.css
+++ b/app/globals.css
@@ -41,6 +41,7 @@ header {
 
 main {
   max-width: 580px;
+  min-width: 500px;
   width: 100%;
   padding: 30px;
   background: white;
@@ -188,6 +189,7 @@ h2 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   gap: 15px;
   padding: 0 10px;
