--- a/app/globals.css
+++ b/app/globals.css
@@ -40,7 +40,7 @@ header {
 }
 
 main {
-  width: 85%;
+  width: 95%;
   max-width: 800px;
   margin: 0 auto;
   margin-top: 80px; /* Add space for fixed header */
@@ -94,7 +94,7 @@ h2 {
   flex-direction: column;
   align-items: center;
   gap: 23px;
-  width: 95%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -128,12 +128,21 @@ h2 {
 @media (min-width: 580px) {
   .identity-button-group {
     flex-direction: row;
-    justify-content: center;
-    gap: 20px; 
+    /* justify-content: center; */
+    gap: 15px; 
   }
 
   .identity-button-group button {
     width: 33%;
+  }
+}
+
+@media (min-width: 480px) {
+  .identity-button-group button {
+    height: 65px; 
+    margin: 5px; 
+    font-size: 17px; 
+    padding: 12px;
   }
 }
 
@@ -273,6 +282,20 @@ h2 {
     width: 95%;
     padding: 15px;
     margin-top: 60px;
+  }
+}
+
+@media (max-width: 480px) {
+  .identity-button-group {
+    gap: 15px; 
+    width: 90%; /* Slightly reduced width */
+  }
+
+  .identity-button-group button {
+    height: 65px; 
+    margin: 8px 1px; 
+    font-size: 16px; 
+    padding: 12px;
   }
 }
 
