--- a/app/globals.css
+++ b/app/globals.css
@@ -252,14 +252,14 @@ h2 {
 }
 
 .container {
-  width: 97%;
+  width: 95%;
   max-width: 600px; /* Match main's max-width */
   margin: 0 auto;
   background: white;
   padding: 40px;
   border-radius: 15px;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
@@ -268,7 +268,7 @@ h2 {
   width: 100%;
   max-width: 400px;
   background: white;
-  padding: 15px;
+  padding: 5px;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   margin: 0 auto;
@@ -497,5 +497,11 @@ h2 {
     justify-content: center;
     align-items: center;
     display: flex;
+  }
+
+  .container {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 20px;
   }
 }
